--- a/style.css
+++ b/style.css
@@ -2,3 +2,25 @@ html {
   height: 100%;
   width: 100%;
 }
+
+body {
+  background-color:#c2c2d6
+  ;
+  }
+
+h1 { background-color:#ebebe0
+ ;
+    color:grey ;
+    padding: 40px;
+    text-align:center;
+    }
+
+p {
+  background-color:#ebebe0
+   ;
+  text-align:center;
+}
+
+img src {
+  text-align:center;
+}
